# JDA

./: README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  headers.txt  out.txt  tauri.conf.json  walkthrough_dump.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scratch_test/: Cargo.toml
src-tauri/src/: commands.rs  downloader.rs  lib.rs  models.rs  server.rs  state.rs  utils.rs
src/Pages/: MainArea.css  MainArea.jsx
src/components/: Add.css  Add.jsx  Cancel.css  Cancel.jsx  Delete.css  Delete.jsx  Progress.css  Progress.jsx  RowList.css  RowList.jsx  Rows.css  Rows.jsx  Tab.css  Tab.jsx  TabBar.css  TabBar.jsx  TitleBar.css  TitleBar.jsx  TopBar.css  TopBar.jsx
src/theme/: colors.css
src/utils/: format.js
