[package]
name = "JDA"
version = "0.2.0"
description = "Jyotismoy's Download Accelerator"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
arboard = "3.6.1"
reqwest = { version = "0.12", features = ["stream", "cookies"] }
tokio = {version = "1.49.0", features = ["full"] }
tauri-plugin-dialog = "2.6.0"
urlencoding = "2.1.3"
tauri-plugin-fs = "2.4.5"
futures-util = "0.3.32"
fs2 = "0.4.3"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-deep-link = "2.4.7"
axum = "0.8.4"
tower-http = { version = "0.6.11", features = ["cors"] }
url = "2.5.8"
